# variorum

./: .gitlab-ci.yml  README
.github/workflows/: github-actions.yml
host-configs/: juno-linaro-aarch64-gcc@5.2.1.cmake  powerlab-gcc.cmake  surface-toss_3_x86_64_ib-gcc@4.9.3-cuda@10.1.168.cmake
src/: CMakeLists.txt
src/config/: CMakeLists.txt  variorum_setup_deps.cmake
src/docs/sphinx/: Licenses.rst  Publications.rst  Variorum.rst  VariorumSource.rst  index.rst.in
src/examples/: CMakeLists.txt  ex-dump-available-frequencies.c  ex-monitoring-to-file.c  ex-poll-power-to-file.c  variorum-cap-and-verify-node-power-limit-example.c  variorum-cap-best-effort-node-power-limit-example.c
src/pmon/: CMakeLists.txt  README.md  monitoring.sh  monitoring_turboLims.sh  pmon.c  turboLim.sh
src/pmon/outFiles/: process.sh
src/powmon/: common.c  power_wrapper_dynamic.c  power_wrapper_static.c  powmon.c
src/utilities/: CMakeLists.txt
src/utilities/msr-tools/: CMakeLists.txt  rdmsr.c  wrmsr.c
src/variorum/: CMakeLists.txt  config_architecture.c  config_architecture.h  msr_core.h  variorum.c  variorum.h  variorum_error.c  variorum_error.h  variorum_timers.c
src/variorum/Arm/: CMakeLists.txt  config_arm.c  config_arm.h
src/variorum/IBM/: Power9.c  config_ibm.c
src/variorum/Intel/: Broadwell_4F.c  Broadwell_4F.h  Haswell_3F.c  Haswell_3F.h  IvyBridge_3E.c  IvyBridge_3E.h  KabyLake_9E.c  KabyLake_9E.h  SandyBridge_2A.c  SandyBridge_2A.h  Skylake_55.c  Skylake_55.h  clocks_features.c  clocks_features.h  config_intel.c  counters_features.c  counters_features.h  misc_features.c  misc_features.h  msr_core.c  power_features.c  power_features.h  thermal_features.c
(+4 files in other folders)
